--- a/src/app/page_users/home-user/home-user.component.html
+++ b/src/app/page_users/home-user/home-user.component.html
@@ -34,7 +34,7 @@
           </li>
           <li><a routerLink="/contact">Liên hệ</a></li>
           <li><a routerLink="/login-user">Đăng nhập</a></li>
-          <li><a (click)="handleLogout()">Đăng xuất</a></li>
+          <!-- <li><a (click)="handleLogout()">Đăng xuất</a></li> -->
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
