--- a/src/app/pages/child-english-ad-list/child-english-ad-list.component.html
+++ b/src/app/pages/child-english-ad-list/child-english-ad-list.component.html
@@ -73,6 +73,7 @@
                               <th><span class="las la-sort"></span> NGÀY KHAI GIẢNG</th>
                               <th><span class="las la-sort"></span> EMAIL</th>
                               <th><span class="las la-sort"></span> SĐT</th>
+                              <th ></th>
 
                           </tr>
                       </thead>
@@ -101,6 +102,11 @@
                              <td>
                               {{childRegister.user.phone}}
                              </td>
+                             <td>
+                              <div class="actions">
+                                <button (click)="onDeleteRegisterListChild(childRegister.id)" class="btn" type="submit"><span class="las la-trash-alt"></span></button>
+                              </div>
+                          </td>
                           </tr>
                       </tbody>
                   </table>
