--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -32,8 +32,9 @@
                   <div class="bg-img" style="background-image: url(../../../assets/img/3.jpeg)"></div>
 
                   <span class="las la-power-off"></span>
-                  <span>Logout</span>
+                  <span (click)="handleLogout()">Logout</span>
               </div>
+
           </div>
       </div>
   </header>
