--- a/src/app/page_users/home-user/home-user.component.html
+++ b/src/app/page_users/home-user/home-user.component.html
@@ -1,14 +1,12 @@
 <body>
   <!-- ======= Header ======= -->
-  <header id="header" class="fixed-top">
+  <!-- <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center">
 
       <h1 class="logo me-auto">
         <a href="index.html">
           <img  src="../../../assets/img/logo-trung-tam-hsk.png" alt="">
         </a></h1>
-      <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="logo me-auto"><img src="../../../assets/img/img/logo.png" alt="" class="img-fluid"></a> -->
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
@@ -33,13 +31,15 @@
             </ul>
           </li>
           <li><a routerLink="/contact">Liên hệ</a></li>
-          <li><a routerLink="/login-user">Đăng nhập</a></li>
-          <!-- <li><a (click)="handleLogout()">Đăng xuất</a></li> -->
+          <li><a *ngIf="!loggedIn" routerLink="/login-user">Đăng nhập</a></li>
+          <li><a *ngIf="loggedIn" (click)="handleLogout()">Đăng xuất</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
-      </nav><!-- .navbar -->
+      </nav>
     </div>
-  </header><!-- End Header -->
+  </header> -->
+  <!-- End Header -->
+  <app-navbar-user></app-navbar-user>
 
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex justify-content-center align-items-center">
