--- a/src/app/page_users/ielts/ielts.component.html
+++ b/src/app/page_users/ielts/ielts.component.html
@@ -1,13 +1,12 @@
 <body>
   <!-- ======= Header ======= -->
-  <header id="header" class="fixed-top">
+  <!-- <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center">
 
       <h1 class="logo me-auto">
         <a href="index.html">
           <img  src="../../../assets/img/logo-trung-tam-hsk.png" alt="">
         </a></h1>
-      <!-- Uncomment below if you prefer to use an image logo -->
       <a href="index.html" class="logo me-auto"><img src="../../../assets/img/img/logo.png" alt="" class="img-fluid"></a>
 
       <nav id="navbar" class="navbar order-last order-lg-0">
@@ -20,7 +19,6 @@
               <li><a routerLink="/young-english">Tiếng Anh thiếu niên</a></li>
               <li><a routerLink="/ielts">Luyện thi IELTS</a></li>
               <li><a routerLink="/toiec">Luyện thi TOEFL - TOEIC & CHỨNG CHỈ QUỐC TẾ</a></li>
-              <!-- <li><a routerLink="/business">Tiếng Anh doanh nghiệp</a></li> -->
               <li><a routerLink="/basic-english">Tiếng Anh Căn Bản - Giao tiếp & Tiếng Anh cho người đi làm</a></li>
             </ul>
           </li>
@@ -34,12 +32,15 @@
             </ul>
           </li>
           <li><a routerLink="/contact">Liên hệ</a></li>
-          <li><a routerLink="/login-user">Đăng nhập</a></li>
+          <li><a *ngIf="!loggedIn" routerLink="/login-user">Đăng nhập</a></li>
+          <li><a *ngIf="loggedIn" (click)="handleLogout()">Đăng xuất</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
-      </nav><!-- .navbar -->
+      </nav>
     </div>
-  </header><!-- End Header -->
+  </header> -->
+  <!-- End Header -->
+  <app-navbar-user></app-navbar-user>
 
   <!-- ======= Hero Section ======= -->
   <section id="hero-child"  class="d-flex justify-content-center align-items-center">
