--- a/src/app/page_users/login-user/login-user.component.html
+++ b/src/app/page_users/login-user/login-user.component.html
@@ -1,15 +1,12 @@
 <body>
   <!-- ======= Header ======= -->
-  <header id="header" class="fixed-top">
+  <!-- <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center">
 
       <h1 class="logo me-auto">
         <a href="index.html">
           <img  src="../../../assets/img/logo-trung-tam-hsk.png" alt="">
         </a></h1>
-      <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="logo me-auto"><img src="../../../assets/img/img/logo.png" alt="" class="img-fluid"></a> -->
-
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
           <li><a  routerLink="/home-user">Trang chủ</a></li>
@@ -36,9 +33,12 @@
           <li><a class="active" routerLink="/login-user">Đăng nhập</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
-      </nav><!-- .navbar -->
+      </nav>
     </div>
-  </header><!-- End Header -->
+  </header>-->
+  <!-- End Header -->
+  <app-navbar-user></app-navbar-user>
+
   <main id="main">
     <section class="h-100 h-custom" >
       <div class="container py-5 h-100">
