--- a/src/app/page_users/register-course/register-course.component.html
+++ b/src/app/page_users/register-course/register-course.component.html
@@ -33,7 +33,8 @@
             </ul>
           </li>
           <li><a routerLink="/contact">Liên hệ</a></li>
-          <li><a routerLink="/login-user">Đăng nhập</a></li>
+          <li><a *ngIf="!loggedIn" routerLink="/login-user">Đăng nhập</a></li>
+          <!-- <li><a *ngIf="loggedIn" (click)="handleLogout()">Đăng xuất</a></li> -->
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
