--- a/src/app/pages/add-basic-english/add-basic-english.component.html
+++ b/src/app/pages/add-basic-english/add-basic-english.component.html
@@ -21,7 +21,7 @@
                                       <!-- <input type="text" [(ngModel)]="courses.program" name="program" id="program" > -->
                                       <select  [(ngModel)]="courses.id" name="id" id="id" class="form-select" aria-label="Default select example" required>
                                         <!-- <option value="1" disabled >-- Chọn khóa học --</option> -->
-                                        <option value="1">Tiếng Anh thiếu nhi</option>
+                                        <option value="5">Giao tiếp căn bản</option>
 
                                     </select>
                                     </td>
@@ -30,19 +30,16 @@
                                       <!-- <input type="text" [(ngModel)]="courses.program" name="program" id="program" > -->
                                       <select  [(ngModel)]="courses.program" name="program" id="program" class="form-select" aria-label="Default select example" required>
                                         <option value="1" disabled >-- Chọn khóa học --</option>
-                                        <option value="KINDER (4-6 tuổi)">KINDER (4-6 tuổi)</option>
-                                        <option value="STARTER (6-8 tuổi)">STARTER (6-8 tuổi)</option>
-                                        <option value="MOVER (8-10 tuổi)">MOVER (8-10 tuổi)</option>
+                                        <option value="Tiếng Anh Giao Tiếp">Tiếng Anh Giao Tiếp</option>
                                     </select>
                                     </td>
                                   <td><span>Cấp độ</span></td>
                                   <td>
                                     <!-- <input type="text" [(ngModel)]="courses.level" name="level" id="level" > -->
                                     <select [(ngModel)]="courses.level" name="level" id="level" required>
-                                      <option value="PRE (Sơ cấp)">PRE (Sơ cấp)</option>
-                                      <option value="MID (Trung cấp)">MID (Trung cấp)</option>
-                                      <option value="ADV (Nâng cao)">ADV (Nâng cao)</option>
-                                      <option value="HON (Chuyên sâu)">HON (Chuyên sâu)</option>
+                                      <option value="CE1">CE1</option>
+                                      <option value="CE2">CE2</option>
+                                      <option value="CE3">CE3</option>
                                     </select>
                                   </td>
                                   <td><span>Học phí</span></td>
