--- a/src/app/pages/add-young-english/add-young-english.component.html
+++ b/src/app/pages/add-young-english/add-young-english.component.html
@@ -21,7 +21,7 @@
                                       <!-- <input type="text" [(ngModel)]="courses.program" name="program" id="program" > -->
                                       <select  [(ngModel)]="courses.id" name="id" id="id" class="form-select" aria-label="Default select example" required>
                                         <!-- <option value="1" disabled >-- Chọn khóa học --</option> -->
-                                        <option value="1">Tiếng Anh thiếu nhi</option>
+                                        <option value="2">Tiếng Anh thiếu niên</option>
 
                                     </select>
                                     </td>
@@ -30,9 +30,9 @@
                                       <!-- <input type="text" [(ngModel)]="courses.program" name="program" id="program" > -->
                                       <select  [(ngModel)]="courses.program" name="program" id="program" class="form-select" aria-label="Default select example" required>
                                         <option value="1" disabled >-- Chọn khóa học --</option>
-                                        <option value="KINDER (4-6 tuổi)">KINDER (4-6 tuổi)</option>
-                                        <option value="STARTER (6-8 tuổi)">STARTER (6-8 tuổi)</option>
-                                        <option value="MOVER (8-10 tuổi)">MOVER (8-10 tuổi)</option>
+                                        <option value="TOEFL Junior">TOEFL Junior</option>
+                                        <option value="IELTS for Teen">IELTS for Teen</option>
+                                        <option value="Luyện thi lớp 10">Luyện thi lớp 10</option>
                                     </select>
                                     </td>
                                   <td><span>Cấp độ</span></td>
