--- a/src/app/page_users/toiec-schedule/toiec-schedule.component.html
+++ b/src/app/page_users/toiec-schedule/toiec-schedule.component.html
@@ -65,68 +65,46 @@
                   </div>
               </div>
             <div>
-              <table width="100%">
-                <thead>
-                    <tr>
-                        <th class="text-center"><span class="las la-sort"></span> CHƯƠNG TRÌNH</th>
-                        <th class="text-center"><span class="las la-sort"></span> CẤP ĐỘ</th>
-                        <th class="text-center"><span class="las la-sort"></span> HỌC PHÍ</th>
-                        <th class="text-center"><span class="las la-sort"></span> LỊCH HỌC</th>
-                        <th class="text-center"><span class="las la-sort"></span> NGÀY KHAI GIẢNG DỰ KIẾN</th>
-                      </tr>
-                </thead>
-                <!-- <tbody *ngFor="let course of courses">
+              <table width="100%" >
+                <thead >
+                    <tr >
+                      <th><span class="las la-sort"></span> CHƯƠNG TRÌNH</th>
+                      <th><span class="las la-sort"></span> CẤP ĐỘ</th>
+                      <th><span class="las la-sort"></span> HỌC PHÍ</th>
+                      <th><span class="las la-sort"></span> LỊCH HỌC</th>
+                      <th><span class="las la-sort"></span> NGÀY KHAI GIẢNG</th>
+                      <th><span class="las la-sort"></span> THỜI LƯỢNG KHÓA</th>
+                      <th><span class="las la-sort"></span> ĐĂNG KÝ</th>
+            </thead>
+                <tbody *ngFor="let course of courses">
                   <tr>
-                     <td>{{course?.id}}</td>
-                     <td>{{course?.courseType}}</td>
-                     <td>{{course?.start_time}}</td>
-                     <td>{{course?.period}}</td>
-                     <td>{{course?.description}}</td>
-                     <td>{{course?.price}}</td>
-                     <td>{{course?.level}}</td>
-                  </tr>
-                </tbody> -->
+                      <!-- <td>{{course?.course_id}}</td> -->
+                      <td>
+                          {{course?.program}}
+                      </td>
+                      <td>
+                          {{course?.level}}
+                      </td>
+                      <td>
+                          {{course?.price | currency:'VND'}}
+                      </td>
+                      <td>
+                        {{course?.schedule}}
+                      </td>
+                      <td>
+                      {{course?.openning}}
+                    </td>
+                    <td>
+                      {{course?.time}}
+                    </td>
+                    <td>
+                      <a class="text-success" (click)="updateCourse(course.course_id)">Đăng ký ngay!</a>
+                    </td>
+                  </tbody>
               </table>
             </div>
           </div>
         </div>
-      </div>
-    </section>
-    <section class="h-100 h-custom">
-        <div class="container py-5 h-100">
-          <div class="row d-flex justify-content-center align-items-center h-100">
-            <div class="col-lg-8 col-xl-6">
-              <div class="card rounded-3">
-                <div class="card-body p-4 p-md-5">
-                  <h3 class="mb-4 pb-2 pb-md-0 mb-md-5 px-md-2 text-center">Đăng ký khóa học</h3>
-
-                  <form  class="px-md-2">
-                    <div class="form-outline mb-4">
-                      <select  name="courseType" id="courseType" class="form-select" aria-label="Default select example">
-                          <option value="1" disabled >-- Chọn khóa học --</option>
-                          <option value="2">TOEIC</option>
-                          <option value="2">TOEFL</option>
-                          <option value="2">Luyện thi CEFR (A2,B1,B2,C1)</option>
-                      </select>
-                    </div>
-                    <div class="form-outline mb-4">
-                      <input type="text"  name="userName" id="userName" class="form-control" placeholder="Tên" />
-                    </div>
-                    <div class="form-outline mb-4">
-                      <input type="text"  name="address" id="address" class="form-control" placeholder="Địa chỉ" />
-                    </div>
-                    <div class="form-outline mb-4">
-                      <input type="text"  name="phone" id="phone" class="form-control" placeholder="Số điện thoại" />
-                    </div>
-                    <div class="form-outline mb-4">
-                      <input type="text"  name="email" id="email" class="form-control" placeholder="Email" />
-                    </div>
-                    <button type="submit" class="btn btn-success btn-lg mb-1">Đăng ký</button>
-                  </form>
-                </div>
-              </div>
-            </div>
-          </div>
       </div>
     </section>
   </main>
