--- a/src/app/pages/add-ielts/add-ielts.component.html
+++ b/src/app/pages/add-ielts/add-ielts.component.html
@@ -21,7 +21,7 @@
                                       <!-- <input type="text" [(ngModel)]="courses.program" name="program" id="program" > -->
                                       <select  [(ngModel)]="courses.id" name="id" id="id" class="form-select" aria-label="Default select example" required>
                                         <!-- <option value="1" disabled >-- Chọn khóa học --</option> -->
-                                        <option value="1">Tiếng Anh thiếu nhi</option>
+                                        <option value="3">Luyện thi IELTS</option>
 
                                     </select>
                                     </td>
@@ -30,19 +30,18 @@
                                       <!-- <input type="text" [(ngModel)]="courses.program" name="program" id="program" > -->
                                       <select  [(ngModel)]="courses.program" name="program" id="program" class="form-select" aria-label="Default select example" required>
                                         <option value="1" disabled >-- Chọn khóa học --</option>
-                                        <option value="KINDER (4-6 tuổi)">KINDER (4-6 tuổi)</option>
-                                        <option value="STARTER (6-8 tuổi)">STARTER (6-8 tuổi)</option>
-                                        <option value="MOVER (8-10 tuổi)">MOVER (8-10 tuổi)</option>
+                                        <option value="IELTS">IELTS</option>
                                     </select>
                                     </td>
                                   <td><span>Cấp độ</span></td>
                                   <td>
                                     <!-- <input type="text" [(ngModel)]="courses.level" name="level" id="level" > -->
                                     <select [(ngModel)]="courses.level" name="level" id="level" required>
-                                      <option value="PRE (Sơ cấp)">PRE (Sơ cấp)</option>
-                                      <option value="MID (Trung cấp)">MID (Trung cấp)</option>
-                                      <option value="ADV (Nâng cao)">ADV (Nâng cao)</option>
-                                      <option value="HON (Chuyên sâu)">HON (Chuyên sâu)</option>
+                                      <option value="PreIELTS">PreIELTS</option>
+                                      <option value="IELTS 4.0">IELTS 4.0</option>
+                                      <option value="IELTS 5.0">IELTS 5.0</option>
+                                      <option value="IELTS 5.5">IELTS 5.5</option>
+                                      <option value="IELTS > 6.0">IELTS > 6.0</option>
                                     </select>
                                   </td>
                                   <td><span>Học phí</span></td>
