--- a/src/app/pages/add-toiec/add-toiec.component.html
+++ b/src/app/pages/add-toiec/add-toiec.component.html
@@ -21,7 +21,7 @@
                                       <!-- <input type="text" [(ngModel)]="courses.program" name="program" id="program" > -->
                                       <select  [(ngModel)]="courses.id" name="id" id="id" class="form-select" aria-label="Default select example" required>
                                         <!-- <option value="1" disabled >-- Chọn khóa học --</option> -->
-                                        <option value="1">Tiếng Anh thiếu nhi</option>
+                                        <option value="4">Luyện thi TOEFL-TOEIC</option>
 
                                     </select>
                                     </td>
@@ -30,19 +30,18 @@
                                       <!-- <input type="text" [(ngModel)]="courses.program" name="program" id="program" > -->
                                       <select  [(ngModel)]="courses.program" name="program" id="program" class="form-select" aria-label="Default select example" required>
                                         <option value="1" disabled >-- Chọn khóa học --</option>
-                                        <option value="KINDER (4-6 tuổi)">KINDER (4-6 tuổi)</option>
-                                        <option value="STARTER (6-8 tuổi)">STARTER (6-8 tuổi)</option>
-                                        <option value="MOVER (8-10 tuổi)">MOVER (8-10 tuổi)</option>
+                                        <option value="TOIEC">TOIEC</option>
                                     </select>
                                     </td>
                                   <td><span>Cấp độ</span></td>
                                   <td>
                                     <!-- <input type="text" [(ngModel)]="courses.level" name="level" id="level" > -->
                                     <select [(ngModel)]="courses.level" name="level" id="level" required>
-                                      <option value="PRE (Sơ cấp)">PRE (Sơ cấp)</option>
-                                      <option value="MID (Trung cấp)">MID (Trung cấp)</option>
-                                      <option value="ADV (Nâng cao)">ADV (Nâng cao)</option>
-                                      <option value="HON (Chuyên sâu)">HON (Chuyên sâu)</option>
+                                      <option value="PRE-TOEIC">PRE-TOEIC</option>
+                                      <option value="TOEIC 350">TOEIC 350</option>
+                                      <option value="TOEIC 450">TOEIC 450</option>
+                                      <option value="TOEIC 500">TOEIC 500</option>
+                                      <option value="TOEIC >600">TOEIC >600</option>
                                     </select>
                                   </td>
                                   <td><span>Học phí</span></td>
