--- a/src/app/pages/toeic-english-ad/toeic-english-ad.component.html
+++ b/src/app/pages/toeic-english-ad/toeic-english-ad.component.html
@@ -52,7 +52,7 @@
                       <select name="" id="">
                           <option value="">ID</option>
                       </select>
-                     <a  routerLink="/add-course"><button>Thêm</button></a>
+                     <a  routerLink="/add-toiec"><button>Thêm</button></a>
                   </div>
 
                   <div class="browse">
@@ -73,38 +73,40 @@
                               <th><span class="las la-sort"></span> HỌC PHÍ</th>
                               <th><span class="las la-sort"></span> LỊCH HỌC</th>
                               <th><span class="las la-sort"></span> NGÀY KHAI GIẢNG DỰ KIẾN</th>
+                              <th><span class="las la-sort"></span> THỜI LƯỢNG KHÓA</th>
                               <th><span class="las la-sort"></span> THAO TÁC</th>
 
                           </tr>
                       </thead>
-                      <!-- <tbody *ngFor="let course of courses">
-                          <tr>
-                              <td>{{course?.id}}</td>
-                              <td>
-                                  {{course?.courseType}}
-                              </td>
-                              <td>
-                                  {{course?.start_time}}
-                              </td>
-                              <td>
-                                  {{course?.period}}
-                              </td>
-                              <td>
-                                 {{course?.description}}
-                              </td>
-                              <td>
-                              {{course?.price}}
-                             </td>
-                           <td> -->
-                            <div class="actions">
-                              <!-- <a> -->
-                                <!-- <button (click)="updateCourse(course.id)" class="btn" type="submit"><span class="las la-edit"></span></button> -->
-                              <!-- </a> -->
-                              <!-- <button (click)="onDeleteCourse(course.id)" class="btn" ><span class="las la-trash-alt"></span></button> -->
-                            </div>
-                        <!-- </td>
-                          </tr>
-                      </tbody> -->
+                      <tbody *ngFor="let course of courses">
+                        <tr>
+                            <td>{{course?.course_id}}</td>
+                            <td>
+                                {{course?.program}}
+                            </td>
+                            <td>
+                                {{course?.level}}
+                            </td>
+                            <td>
+                                {{course?.price | currency:'VND'}}
+                            </td>
+                            <td>
+                               {{course?.schedule}}
+                            </td>
+                            <td>
+                            {{course?.openning}}
+                           </td>
+                           <td>
+                            {{course?.time}}
+                           </td>
+                         <td>
+                          <div class="actions">
+                            <button (click)="updateCourse(course.course_id)" class="btn" type="submit"><span class="las la-edit"></span></button>
+                            <button (click)="onDeleteCourse(course.course_id)" class="btn" ><span class="las la-trash-alt"></span></button>
+                          </div>
+                      </td>
+                        </tr>
+                    </tbody>
                   </table>
               </div>
 
