--- a/src/app/pages/teacher-manager/teacher-manager.component.html
+++ b/src/app/pages/teacher-manager/teacher-manager.component.html
@@ -77,11 +77,13 @@
                                     <button (click)="updateTeacher(teacher.id)" class="btn" type="submit"><span class="las la-edit"></span></button>
                                     <button (click)="onDeleteTeacher(teacher.id)" class="btn" type="submit"><span class="las la-trash-alt"></span></button>
                                     <button (click)="addTeacherSchedule(teacher.id)" class="btn" type="submit"> <span class="las la-calendar-day"></span></button>
+                                    <button (click)="findTeacherSchedule(teacher.id)" class="btn" type="submit"> <span class="las la-calendar-check"></span></button>
                                   </div>
                               </td>
                           </tr>
                       </tbody>
                   </table>
+
               </div>
 
           </div>
